--- a/project-root/frontend/src/styles/settings.module.css
+++ b/project-root/frontend/src/styles/settings.module.css
@@ -1,9 +1,5 @@
 .settingsWrapper {
-    height: 100%;
-    width: 100%;
     background: #ffffff;
-    overflow-y: auto;
-    max-height: 100vh;
     margin: 10px;
     gap: 10px;
 }
